--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "auth0-js": "^9.11.3",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "ngx-spinner": "^7.2.0",
     "rxjs": "~6.4.0",
     "rxjs-compat": "^6.5.2",
     "tslib": "^1.9.0",
