--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/router": "~7.2.0",
     "@types/auth0-js": "^9.10.6",
     "auth0-js": "^9.11.3",
+    "bootstrap": "^4.4.1",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "ngx-spinner": "^7.2.0",
     "rxjs": "~6.4.0",
