--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "ngx-spinner": "^7.2.0",
-    "node-sass": "^8.0.0",
     "rxjs": "~6.4.0",
     "rxjs-compat": "^6.5.2",
+    "sass": "^1.57.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
